# stepback-ML-GDG-team1-ml-

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  HANDOFF_TO_BE.md  INSTALL.md  Makefile  NOTES.md  README.md  README_old.md  RUN.md  START_HERE.bat  TEST.md  run_all.bat  run_serve.bat  run_test.bat  start_here.sh
docs/: demo_script.md  (+11 more)
ml_service/: Dockerfile  README.md  deploy_gcp.sh  docker-compose.local.yml  postman_collection.json  pyproject.toml  requirements-dev.txt  requirements.txt
ml_service/app/: config.py  main.py
ml_service/app/api/: admin.py  calendar.py  drills.py  entries.py  feedback.py  health.py  insights.py  label.py  monthly.py  personalization.py  recommend.py  reports.py  weekly.py
ml_service/app/core/: action_tracker.py  ask_user.py  auto_discovery.py  baselines.py  crisis_card.py  drill_catalog.py  feedback_store.py  insights_store.py  labeler.py  labels.py  monthly_report.py  personalization.py  positive_card.py  recommender.py  self_check_quiz.py  weekly_coaching.py  weekly_report.py
ml_service/app/infra/: audit_log.py  error_handler.py  llm_client.py  metrics.py  pii_masker.py  quota_manager.py  request_context.py
ml_service/app/schemas/: baseline.py  common.py  feedback.py  insight.py  label.py  monthly.py  recommend.py  weekly.py
ml_service/scripts/: analyze_labeling.py  check_gemini_key.py  lint_copy.py  load_test.py  pre_demo_check.py  purge_old_data.py  run_smoke.bat  run_smoke.sh  seed_demo_data.py  simulate_recommend.py  test_gemini_e2e.py  test_gemini_live.py
ml_service/tests/: conftest.py
(+61 files in other folders)
